# itmo-7sem-ml

./: Common.hs  HW1.hs  HW1Main.hs  Main.hs  Train.hs  hw2-data.csv  itmo-7sem-ml-hw1.cabal  knn-report.md  ml.cabal  readme.md
data/recsys/: _2train.csv  _train.csv
src/: ClassCommon.hs  Common.hs  Knn.hs  KnnMain.hs  LinMain.hs  Linear.hs  LogReg.hs  RecSys.hs  RecSysMain.hs  Smo.hs  Svm.hs  SvmMain.hs  Train.hs
