name:                ml
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              georgeee
maintainer:          george.agapov@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hw1
  main-is:             HW1Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       KdTree >= 0.2.1,
                       MonadRandom >= 0.1.7,
                       random-shuffle == 0.0.4,
                       hashmap >= 1.3
  -- hs-source-dirs:      
  default-language:    Haskell2010
