name:                ml
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              georgeee
maintainer:          george.agapov@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable knn
  hs-source-dirs:      src
  main-is:             KnnMain.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7,
                       kdt >= 0.2.3,
                       array >= 0.5,
                       random-fu >= 0.2.6,
                       random-source ==0.3.*,
                       hashmap >= 1.3,
                       old-time >= 1

                       -- hs-source-dirs:      
  default-language:    Haskell2010

executable linearClassifiers
  hs-source-dirs:      src
  main-is:             LinMain.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7,
                       array >= 0.5,
                       random-fu >= 0.2.6,
                       random-source ==0.3.*,
                       hashmap >= 1.3,
                       repa >= 3.4,
                       easyplot >= 1.0,
                       vector >= 0.10,
                       old-time >= 1
                       -- hs-source-dirs:      
  default-language:    Haskell2010
executable recSys
  hs-source-dirs:      src
  main-is:             RecSysMain.hs
  -- other-modules:       
  -- other-extensions:    
  ghc-options:         -O2
  build-depends:       base >=4.7,
                       array >= 0.5,
                       hmatrix >= 0.17,
                       cassava >= 0.4,
                       vector >= 0.10,
                       bytestring >= 0.10,
                       deepseq >= 1.4,
                       random-fu >= 0.2.6,
                       random-source ==0.3.*,
                       rvar >= 0.2,
                       mtl >= 2.2,
                       unordered-containers >= 0.2.5,
                       old-time >= 1
                       -- hs-source-dirs:      
  default-language:    Haskell2010
